--- a/react-api-ex/package.json
+++ b/react-api-ex/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fetch-jsonp": "^1.1.3",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -12,7 +13,8 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
