--- a/react-api-ex/package.json
+++ b/react-api-ex/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.3",
+    "connected-react-router": "^6.6.1",
     "fetch-jsonp": "^1.1.3",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
