--- a/react-example/react-redux-ex2/package.json
+++ b/react-example/react-redux-ex2/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aphrodite": "^2.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "react-with-styles": "^4.1.0",
+    "react-with-styles-interface-aphrodite": "^5.0.1",
     "redux": "^4.0.5"
   },
   "scripts": {
