--- a/react-example/excel-export-example/package.json
+++ b/react-example/excel-export-example/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "file-saver": "^2.0.5",
+    "json-loader": "^0.5.7",
     "react": "^17.0.2",
+    "react-data-export": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
