--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -11,7 +11,10 @@
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.14",
+    "husky": "^7.0.2",
     "jest-styled-components": "^7.0.5",
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -24,6 +27,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "eslintConfig": {
     "extends": [
