--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -9,7 +9,8 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.26",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.14",
     "husky": "^7.0.2",
     "jest-styled-components": "^7.0.5",
@@ -17,6 +18,7 @@
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
