--- a/react-table-example/package.json
+++ b/react-table-example/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "@types/react-table": "^7.7.14",
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
