--- a/react-instagram-notification/server/package.json
+++ b/react-instagram-notification/server/package.json
@@ -1,6 +1,13 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+	"name": "server",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"scripts": {
+		"start": "nodemon server.ts"
+	},
+	"dependencies": {
+		"nodemon": "^3.0.1",
+		"socket.io": "^4.7.2"
+	}
 }
