feat: 인스타 알림 마무리

--- a/react-instagram-notification/server/package.json
+++ b/react-instagram-notification/server/package.json
@@ -8,6 +8,8 @@
 	},
 	"dependencies": {
 		"nodemon": "^3.0.1",
-		"socket.io": "^4.7.2"
+		"socket.io": "^4.7.2",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.2.2"
 	}
 }
