--- a/react-movie-theater/server/package.json
+++ b/react-movie-theater/server/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "nodemon server.ts"
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
 		"nodemon": "^3.0.1",
