--- a/react-zustand-example/package.json
+++ b/react-zustand-example/package.json
@@ -16,10 +16,12 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.503.0",
+		"next-themes": "^0.4.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-scripts": "5.0.1",
 		"shadcn-ui": "^0.9.5",
+		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss-animate": "^1.0.7",
 		"tw-animate-css": "^1.2.7",
