--- a/react-zustand-example/package.json
+++ b/react-zustand-example/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@craco/craco": "^7.1.0",
+		"@radix-ui/react-alert-dialog": "^1.1.11",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
