--- a/react-craft.js-example/package.json
+++ b/react-craft.js-example/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^19.0.0",
+    "react-rnd": "^10.5.2",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.5"
   },
