fix: 에러 수정정

--- a/react-craft.js-example/tsconfig.json
+++ b/react-craft.js-example/tsconfig.json
@@ -1,7 +1,13 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+	"compilerOptions": {
+		"noImplicitAny": false,
+		"strict": false,
+		"jsx": "react-jsx",
+		"esModuleInterop": true
+	},
+	"files": [],
+	"references": [
+		{ "path": "./tsconfig.app.json" },
+		{ "path": "./tsconfig.node.json" }
+	]
 }
