--- a/react-file-manager/package.json
+++ b/react-file-manager/package.json
@@ -1,62 +1,66 @@
 {
-  "name": "react-file-manager",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@minoru/react-dnd-treeview": "^3.5.3",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "react": "^19.1.0",
-    "react-contexify": "^6.0.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.1.0",
-    "react-dropzone": "^14.3.8",
-    "react-icons": "^5.5.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "zustand": "^5.0.6"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "msw": "^2.10.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
-  }
+	"name": "react-file-manager",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@minoru/react-dnd-treeview": "^3.5.3",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.126",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"react": "^19.1.0",
+		"react-contexify": "^6.0.0",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
+		"react-dom": "^19.1.0",
+		"react-dropzone": "^14.3.8",
+		"react-icons": "^5.5.0",
+		"react-scripts": "5.0.1",
+		"typescript": "^4.9.5",
+		"web-vitals": "^2.1.4",
+		"zustand": "^5.0.6"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "GENERATE_SOURCEMAP=false react-scripts build",
+		"build:analyze": "GENERATE_SOURCEMAP=false npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"lint": "eslint src --ext .ts,.tsx",
+		"lint:fix": "eslint src --ext .ts,.tsx --fix",
+		"type-check": "tsc --noEmit"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.21",
+		"msw": "^2.10.4",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^3.4.17"
+	},
+	"msw": {
+		"workerDirectory": [
+			"public"
+		]
+	}
 }
